--- a/squid.yaml
+++ b/squid.yaml
@@ -13,7 +13,7 @@ deploy:
       - sqd
       - process:prod
     env:
-      RPC_ENDPOINT: https://testnet-rpc.plumenetwork.xyz/http
+      RPC_ENDPOINT: https://devnet-rpc.plumenetwork.xyz
   api:
     cmd:
       - sqd
