--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ GQL_PORT=4350
 # Use private endpoints in production! If deploying to Cloud:
 # - use our RPC proxy service: https://docs.subsquid.io/cloud/resources/rpc-proxy/, OR
 # - save your private url as a secret: https://docs.subsquid.io/cloud/resources/env-variables/#secrets
-RPC_ENDPOINT=https://test-rpc.plumenetwork.xyz
+RPC_ENDPOINT=https://phoenix-rpc.plumenetwork.xyz
+GATEWAY=https://v2.archive.subsquid.io/network/plume-mainnet
 
 # Uncommenting this line enables the debug mode
 # More info at https://docs.subsquid.io/basics/logging/
